--- a/src/components/Main/List/Card/Card.css
+++ b/src/components/Main/List/Card/Card.css
@@ -1,3 +1,77 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+:root {
+  --negro: #0a0a0a;
+  --naranja: #ffbc03;
+  --rosa:#f2b1d7;
+  --verde:#d0ea56;
+  --blanco: #ffffff;
+  --font-light: 300;
+  --font-regular: 400;
+  --font-medium: 600;
+  --font-bold: 900;
+}
+
 h4 {
     font-size: 30px;
+    font-weight: var(--font-medium);
+    margin: 0px 20px;
+    margin-bottom: 8px;
+}
+
+h5 {
+    font-size: 20px;
+    font-weight: var(--font-medium);
+    margin: 0px 20px;
+    margin-bottom: 0;
+}
+
+p {
+    font-size: 18px;
+    font-weight: var(--font-light);
+    margin: 0px 20px;
+    margin-bottom: 10px;
+}
+
+.infoTarea {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    padding: 24px 16px;
+    gap: 12px;
+    border-radius: 24px;
+    margin-bottom: 0px;
+    background-color: var(--rosa);
+    color: var(--negro);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.infoTarea:hover {
+    transform: scale(1.03); 
+}
+
+.infoFechas {
+    display: flex;
+    flex-direction: row;
+    margin-top: 0px;
+}
+
+.removeBoton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    padding: 8px 8px;
+    margin-left: 20px;
+    border-radius: 8px;
+    background-color: var(--negro);
+    border: solid 2px var(--negro);
+    color: var(--blanco);
+    font-size: 14px;
+    transition: background-color 0.3s; 
+}
+
+.removeBoton:hover {
+    background-color: var(--rosa);
+    border: solid 2px var(--negro);
+    color: var(--negro);
 }
