--- a/src/components/Main/List/Card/Card.css
+++ b/src/components/Main/List/Card/Card.css
@@ -55,13 +55,23 @@ p {
     margin-top: 0px;
 }
 
-.removeBoton {
+.botonesCard {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    margin-left: 20px;
+}
+
+.removeBoton,
+.editBoton,
+.tacharBoton,
+.guardarBoton,
+.cancelarBoton{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 150px;
     padding: 8px 8px;
-    margin-left: 20px;
     border-radius: 8px;
     background-color: var(--negro);
     border: solid 2px var(--negro);
@@ -70,8 +80,33 @@ p {
     transition: background-color 0.3s; 
 }
 
-.removeBoton:hover {
+.removeBoton:hover,
+.editBoton:hover,
+.tacharBoton:hover {
     background-color: var(--rosa);
     border: solid 2px var(--negro);
     color: var(--negro);
+}
+
+.editForm {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    gap: 8px;
+    width: 500px;
+}
+
+.editForm input {
+    display: flex;
+    height: 16px;
+    padding: 8px;
+    border-radius: 8px;
+    
+}
+
+.editFormBoton {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    margin-top: 8px;
 }
