--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap');
 header {
-  font-family: "Rubik", sans-serif;
+  font-family: "Unbounded", sans-serif;
   font-optical-sizing: auto;
+  font-style: normal;
   color:var(--rosa);
   margin-top: 80px;
 }
@@ -9,16 +11,36 @@ h1 {
   display: flex;
   flex-direction: column;
   margin:40px;
-  margin-bottom: 16px;
-  font-weight: var(--font-medium);
-  font-size: 70px;
+  margin-bottom: 24px;
+  font-weight: 700;
+  font-size: 40px;
+}
+
+.big {
+  font-size: 90px;
 }
 
 header p {
   display: flex;
   flex-direction: column;
   margin: 0px 40px;
-  font-weight: var(--font-light);
+  font-weight: 200;
   font-size: 20px;
 }
 
+@media (max-width: 600px) {
+  h1 {
+    margin: 20px;
+    margin-bottom: 16px;
+    font-size: 28px; 
+  }
+
+  .big {
+    font-size: 50px; 
+  }
+
+  header p {
+    margin: 0px 20px;
+    font-size: 16px; 
+  }
+}
