--- a/src/components/Main/List/List.css
+++ b/src/components/Main/List/List.css
@@ -18,8 +18,9 @@ article {
   font-weight: var(--font-regular);
 }
 
-p {
+.addNuevaTarea p {
     font-size: 14px;
+    margin: 0
 }
 
 .formulario {
@@ -28,7 +29,7 @@ p {
     box-sizing: border-box;
     width: 100%;
     gap: 20px;
-    padding: 20px;
+    padding: 24px;
     border-radius: 24px;
     border: solid 2px var(--blanco);
     margin-bottom: 20px;
@@ -62,6 +63,11 @@ p {
   padding: 2px 8px;
 }
 
+.titulo_descripcion input:hover,
+.formFechas input:hover  {
+  border: solid 2px var(--naranja)
+}
+
 .botonesLista {
   display: flex;
   flex-direction: row;
@@ -83,8 +89,17 @@ p {
     border: solid 2px var(--blanco);
     color: var(--negro);
     font-size: 16px;
-    font-weight: var(--font-medium);
+    font-weight: var(--font-regular);
     transition: background-color 0.3s; 
+}
+
+.removeList:hover,
+.resetTareas:hover,
+.addTareaBoton:hover{
+    background-color: var(--negro);
+    border: solid 2px var(--rosa);
+    color: var(--rosa);
+
 }
 
 .mensajeAddTarea,
@@ -98,3 +113,69 @@ p {
   font-weight: var(--font-light);
 
 }
+
+
+@media (max-width: 600px) {
+
+  article {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    justify-content: center;
+    align-items: center;
+
+  }
+  .addNuevaTarea p {
+    font-size: 16px;
+    margin-left: 10px;
+  }
+
+  .formulario {
+    display: flex;
+    padding: 16px;
+  }
+
+  .titulo_descripcion {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 10px;
+
+  }
+
+  .titulo_descripcion input {
+    display: flex;
+    width: 90%;
+    height: 28px;
+  }
+
+  /* Fechas en columna también */
+  .formFechas {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 10px;
+  }
+
+  .formFechas input {
+    width: 85%;
+    height: 28px;
+  }
+
+  /* Botones en columna para evitar overflow */
+  .botonesLista {
+    flex-direction: row;
+    align-items: stretch;
+    width: 250px;
+    gap: 12px;
+    margin-bottom: 24px;
+  }
+
+  .removeList,
+  .resetTareas,
+  .addTareaBoton {
+    width: 100%;
+    margin-left: 0;
+    font-size: 14px;
+    padding: 8px;
+  }
+
+  }
